* fixed layout bug in contacts

--- a/assets/css/ext.css
+++ b/assets/css/ext.css
@@ -1,7 +1,3 @@
-table.list tr.odd td{
-	background-color: #f3f3f3;
-}
-
 /* -------------------------
 	Personlist
    -------------------------*/
